2005-05-12  Tom Copeland  <tom@infoether.com>

	* www/include/languages/Swedish.tab: Applied patch 1253 from Lennart
	Petersson.

2005-05-12  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* www/themes/osx/images/ic/*.png: Overwritten with the same images
	from gforge theme so that background is transparent.
	[A-Z]*.png are unused legacy from SourceForge and are removed.
	* cronjobs/cvs-cron/cvs.php: syncmail line in loginfo should end
	with new line character to not break adding cvstracker line.
	(addsyncmail): Fixed test if loginfo file exists.  Use __FILE__.

2005-05-09  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* cronjobs/cvs-cron/cvs.php: Added missing closing bracket.
	* cronjobs/crontab.in: Added commented out entries for SCM
	snapshots (CVS and SVN).
	* docs/docbook/docbook/installation_guide/installation_guide.xml:
	Continued overhaul of the guide.  Only CVSTracker and SVN sections
	are not reworked yet.

2005-05-06	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Bug fixes in FRS:
		- When trying to delete a release or a package, the corresponding 
		directory didn't get deleted.
		- Wrong error message displayed when not specifying a file on a release
		creation.
	* Feature for replying mail messages sent by a tracker works now. The user
	must enter his reply between special markers.

2005-05-01  Mathieu Peltier <mathieu.peltier@gmail.com>
	* Bug fix in cvsweb cgi - "General options" panel was not working
	
2005-03-25  Tim Perdue <tim@gforge.org>

	* Bug fix in Group::removeUser - could fail in some cases
	* tracker - the group_id and tracker_id are optional now
	* SOAP - add support for the new EXTRA FIELDS

2004-04-29	Marcelo Mottalli <marcelo@gforgegroup.com>
	
	* Bug fixes in tracker / mass update:
		- when having a custom field of type "status", there was no 
		"No change" option forcing the user to update the status of all 
		the artifacts.
		- when having a custom field of type "checkbox" or "multiselect" and 